--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-deprecate": "^0.7.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "generate-it": "^5.62.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.3.3",
     "tsc-alias": "^1.8.11",
